# dockhand

./: .dockhand.json  .gitignore  CLAUDE.md  EXTRACTION_NOTES.md  LICENSE  README.md  pyproject.toml
dockhand/: __init__.py  build.py  config.py  constants.py  docker.py  download.py  error.py  history.py  manage.py  queue.py  resubmit.py  run.py  submit.py  sync.py  tagging.py  transport.py  tunnel.py  volumes.py
dockhand/client/: __init__.py  base.py  local.py  ssh.py
